Adding stream & query jobs for MemSql/Cassandra/SnappyData